paleta de cores

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+/* 
+    PALETA DE CORES
+    VERDE: #49a09d
+    LILÁS: #5f2c82
+*/
+
 * {
     margin: 0px;
     padding: 0px;
