--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,6 +30,7 @@ section#login {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
     background-color: white;
     width: 250px;
     height: 500px;
@@ -52,4 +53,9 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
 }
