--- a/estilos/style.css
+++ b/estilos/style.css
@@ -88,6 +88,7 @@ div.campo > span {
 
 div.campo > input {
     background-color: #94f5f2;
+    margin: auto;
     font-size: 1em;
     width: calc(100% - 44.38px);
     height: 100%;
